# Geospatial-COSICorr3D

./: Dockerfile  Dockerfile_Base_image  Dockerfile_conda  Dockerfile_new  LICENSE  NEWS.md  README.md  create_docker.sh  docker-compose.yml  geoCosiCorr3D.yml  geoCosiCorr3D_DK.yml  geoCosiCorr3D_dev_py39_with_v.yml  geocosicorr3d_conda_py37.dockerfile  install_cosicorr.sh  pyproject.toml  run_cosicorr_tests.sh  setup.cfg  setup.py
.github/workflows/: docker-publish.yml  geocosicorr3d_conda_env_and_tests.yaml  geocosicorr3d_conda_env_test_correlation.yaml  geocosicorr3d_conda_env_test_ortho.yaml  linux_conda_setup_and_tests.yaml  test_conda_run_install_ubuntu.yaml  test_docker_run_install_ubuntu.yaml  test_geoCosiCorr3D_conda
Doc/: GUI_DOC.md
Doc/Notes/: docker_permission_issues.md  poetry.md
geoCosiCorr3D/: __init__.py  config.yaml  geoConfig.py  geoCosiCorr3dLogger.py
geoCosiCorr3D/geo3DDA/: compute_3DD.py  main_geo3DDA.py  misc.py  tiling.py  triangulation.py
geoCosiCorr3D/geoCore/: constants.py  core_RFM.py  core_RSM.py  core_cli.py  core_correlation.py  core_geoGCPs.py  core_resampling.py  geoDEM.py  geoRawInvOrtho.py  geoRawRSMMapping.py  geoRawTp.py  transformer.py
geoCosiCorr3D/geoCosiCorr3D_CLI/: correlate_cli.py
geoCosiCorr3D/geoCosiCorr3D_GUI/: correlate_gui.py
geoCosiCorr3D/geoCosiCorr3D_scripts/: geoCosiCorr3D_end_2_end_pipeline.py
geoCosiCorr3D/geoErrorsWarning/: geoErrors.py  geoWarnings.py
geoCosiCorr3D/geoImageCorrelation/: batch_correlate.py  correlate.py  correlate_v1.py  correlation_wo.py  geoCorr_utils.py  get_shift.py  misc.py  plot.py
geoCosiCorr3D/geoOptimization/: Optimize.py  RSM_Refinement.py  gcpOptimization.py  gcpOptimization_v2.py  optm_gcps_kps.py  rfmOptimization.py  rsmOptimization.py
geoCosiCorr3D/geoOrthoResampling/: GCPPatch.py  GCPPatches.py  geoGCPOrtho.py  geoOrtho.py  geoOrthoGrid.py  geoOrtho_misc.py  geoResampling.py  geoResampling_v2.py
geoCosiCorr3D/geoRFM/: RFM.py  cRFM_old.py  geoRFM_old.py  load_rfm.py
geoCosiCorr3D/geoRSM/: DigitalGlobe_RSM.py  Ground2Pixel.py  Ground2Pixel_old.py  Interpol.py  Pixel2GroundDirectModel.py  Pixel2GroundDirectModel_old.py  RSM_Transformer.py  RSM_misc_old.py  SPOT2_HRV1_CCD_Correction  SPOT4_HRV1_CCD_Correction  SatModel.py  Spot_RSM.py  __init__.py  geoRSM.py  geoRSM_generation.py  misc.py  utils.py
geoCosiCorr3D/geoTiePoints/: FeatureDetection.py  MicMacTP.py  Tp2GCPs.py  geoTP.py  misc.py  wf_features.py
geoCosiCorr3D/geoWorkflow/: wf_features.py
geoCosiCorr3D/georoutines/: file_cmd_routines.py  geo_utils.py  geoplt_misc.py  georoutines.py  misc.py
geoCosiCorr3D/lib/: libgeoStatCorr.so.1
geoCosiCorr3D/time_series/: base_analyzer.py  geoICA.py  geoPCAIM.py  (+2 more)
geoCosiCorr3D_CLI/: correlate_cli.py
geoCosiCorr3D_GUI/: correlate_gui.py
lib/: libintlc.so.5  libippcore.so.10  libippi.so.10  libipps.so.10  libippvm.so.10
marie_ws/: correlation_tmp.py
scripts/: batch_correlation.py  correlation.py  cosicorr.py  geoCosiCorr3D_end_2_end_pipeline.py  run_correlation.py  script_orthorectification.py
tests/: geoCorrelation_tests.py  geoCosiCorr3D_tests.txt  geoOpt_tests.py  geoTpsGCPs_tests.py  test_gcp_gen.py  test_geoCorrelation.py  test_geoOpt.py  test_geoOpt_2.py  test_geoOrtho.py  test_geoRSM.py  test_geoSatGrid.py  test_geoTpsGCPs.py  test_loading_models.py  test_sat_models.py  test_tp_gcp_gen.py
(+95 files in other folders)
