[metadata]
name = geoCosiCorr3D
version = 3.0.1
author = Saif Aati
author_email = saif@caltech.edu, saifaati@gmail.com
description = Geospatial COSI-Corr 3D
long_description = file: README.md, NEWS.md
long_description_content_type = text/markdown
url = https://github.com/SaifAati/geoCosiCorr3D.git
platform = unix, linux, win64, osx

classifiers =
    programming Language :: Python :: 3.7

license : GNU General Public License v3 (GPLv3)
license_files = LICENSE

[options]
python_requires = >= 3.7
;packages = find:
;[options.packages.find]
;where = src
;include =
;    geoCosiCorr3D
;    geoCosiCorr3D.geo3DDA
;    geoCosiCorr3D.geoCore
;    geoCosiCorr3D.geoCore.base
;    geoCosiCorr3D.geoCosiCorr3D_CLI
;    geoCosiCorr3D.geoCosiCorr3D_CLI.geoImageCorrelation_cli
;    geoCosiCorr3D.geoCosiCorr3D_GUI
;    geoCosiCorr3D.geoCosiCorr3D_GUI.geoImageCorrelation_GUI
;    geoCosiCorr3D.geoCosiCorr3D_scripts
;    geoCosiCorr3D.geoErrorsWarning
;    geoCosiCorr3D.geoImageCorrelation
;    geoCosiCorr3D.geoOptimization
;    geoCosiCorr3D.geoOrthoResampling
;    geoCosiCorr3D.geoRFM
;    geoCosiCorr3D.geoRFM.RFM_Lib
;    geoCosiCorr3D.georoutines
;    geoCosiCorr3D.georoutines.utils
;    geoCosiCorr3D.geoRSM
;    geoCosiCorr3D.geoRSM.geoRSM_metadata
;    geoCosiCorr3D.geoTiePoints
;    geoCosiCorr3D.utils
include_package_data = True
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
geoCosiCorr3D = py.typed

[flake8]
max-line-length = 160