[metadata]
name = geoCosiCorr3D
version = 2.5.3
author = Saif Aati
author_email = saif@caltech.edu, saifaati@gmail.com
description = Geospatial COSI-Corr 3D
long_description = file: README.md, NEWS.md
long_description_content_type = text/markdown
url = https://github.com/SaifAati/geoCosiCorr3D.git
platform = unix, linux, win64, osx

classifiers =
    programming Language :: Python :: 3.8

license : GNU General Public  License v3 (GPLv3)
license_file = LICENSE

[options]
packages =
    geoCosiCorr3D


python_requires = >=3.8

zip_safe = no
[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
geoCosiCorr3D = py.typed

[flake8]
max-line-length = 160